--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.zach.fitlivin"
-        minSdkVersion 15
+        applicationId "edu.sc.fitlivinapp"
+        minSdkVersion 5
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -21,6 +21,4 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.google.android.gms:play-services:7.8.0'
 }
