--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
             android:name=".PointsPage"
             android:label="@string/title_activity_points_page" >
         </activity>
+        <activity
+            android:name=".Profile_Page"
+            android:label="@string/title_activity_profile__page" >
+        </activity>
+
     </application>
 
 </manifest>
