--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,19 +34,19 @@
             android:label="@string/title_activity_points_page" >
         </activity>
         <activity
-            android:name=".Profile_Page_Fragment"
+            android:name=".ProfilePageFragment"
             android:label="@string/title_activity_profile__page" >
         </activity>
         <activity
-            android:name=".FP_STR_TrainingFragment"
+            android:name=".FPSTRTrainingFragment"
             android:label="@string/title_activity_fp__str__training" >
         </activity>
         <activity
-            android:name=".FP_Body_Building_Fragment"
+            android:name=".FPBodyBuildingFragment"
             android:label="@string/title_activity_fp__body__building" >
         </activity>
         <activity
-            android:name=".FP_WGT_Loss_Fragment"
+            android:name=".FPWGTLossFragment"
             android:label="@string/title_activity_fp__wgt__loss" >
         </activity>
     </application>
