--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.sc.myapplication" >
+    package="edu.sc.FitLivin" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
-            android:name=".MainActivity"
+            android:name="edu.sc.FitLivin.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,35 +20,35 @@
         </activity>
 
         <activity
-            android:name=".BMICAL_Fragment"
+            android:name="edu.sc.FitLivin.BMICAL_Fragment"
             android:label="@string/title_activity_bmical" >
         </activity>
         <activity
-            android:name=".NutritionCalFragment"
+            android:name="edu.sc.FitLivin.NutritionCalFragment"
             android:label="@string/title_activity_nutrition_cal" >
         </activity>
         <activity
-            android:name=".TrackProgressFragment"
+            android:name="edu.sc.FitLivin.TrackProgressFragment"
             android:label="@string/title_activity_track_progress" >
         </activity>
         <activity
-            android:name=".PointsPageFragment"
+            android:name="edu.sc.FitLivin.PointsPageFragment"
             android:label="@string/title_activity_points_page" >
         </activity>
         <activity
-            android:name=".ProfilePageFragment"
+            android:name="edu.sc.FitLivin.ProfilePageFragment"
             android:label="@string/title_activity_profile__page" >
         </activity>
         <activity
-            android:name=".FPSTRTrainingFragment"
+            android:name="edu.sc.FitLivin.FPSTRTrainingFragment"
             android:label="@string/title_activity_fp__str__training" >
         </activity>
         <activity
-            android:name=".FPBodyBuildingFragment"
+            android:name="edu.sc.FitLivin.FPBodyBuildingFragment"
             android:label="@string/title_activity_fp__body__building" >
         </activity>
         <activity
-            android:name=".FPWGTLossFragment"
+            android:name="edu.sc.FitLivin.FPWGTLossFragment"
             android:label="@string/title_activity_fp__wgt__loss" >
         </activity>
     </application>
