--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,59 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.sc.FitLivin" >
+    package="edu.sc.FitLivin">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".Application"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="edu.sc.FitLivin.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".BMICAL_Fragment"
+            android:label="@string/title_activity_bmical" />
+        <activity
+            android:name=".NutritionCalFragment"
+            android:label="@string/title_activity_nutrition_cal" />
+        <activity
+            android:name=".TrackProgressFragment"
+            android:label="@string/title_activity_track_progress" />
+        <activity
+            android:name=".PointsPageFragment"
+            android:label="@string/title_activity_points_page" />
+        <activity
+            android:name=".ProfilePageFragment"
+            android:label="@string/title_activity_profile__page" />
+        <activity
+            android:name=".FPSTRTrainingFragment"
+            android:label="@string/title_activity_fp__str__training" />
+        <activity
+            android:name=".FPBodyBuildingFragment"
+            android:label="@string/title_activity_fp__body__building" />
+        <activity
+            android:name=".FPWGTLossFragment"
+            android:label="@string/title_activity_fp__wgt__loss" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login">
+        </activity>
+        <activity android:name=".DispatchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name="edu.sc.FitLivin.BMICAL_Fragment"
-            android:label="@string/title_activity_bmical" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.NutritionCalFragment"
-            android:label="@string/title_activity_nutrition_cal" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.TrackProgressFragment"
-            android:label="@string/title_activity_track_progress" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.PointsPageFragment"
-            android:label="@string/title_activity_points_page" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.ProfilePageFragment"
-            android:label="@string/title_activity_profile__page" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.FPSTRTrainingFragment"
-            android:label="@string/title_activity_fp__str__training" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.FPBodyBuildingFragment"
-            android:label="@string/title_activity_fp__body__building" >
-        </activity>
-        <activity
-            android:name="edu.sc.FitLivin.FPWGTLossFragment"
-            android:label="@string/title_activity_fp__wgt__loss" >
-        </activity>
+        <activity android:name=".SignupActivity"></activity>
+        <activity android:name=".SignUporLogin"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
