--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,20 @@
 *.iml
 
 ## Directory-based project format:
-#.idea/
+.idea/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
+#.idea/workspace.xml
+#.idea/tasks.xml
+#.idea/dictionaries
 
 # Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+#.idea/dataSources.ids
+#.idea/dataSources.xml
+#.idea/sqlDataSources.xml
+#.idea/dynamic.xml
+#.idea/uiDesigner.xml
 
 # Gradle:
 .idea/gradle.xml
@@ -36,7 +36,7 @@
 /out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+#.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
@@ -77,3 +77,4 @@ proguard/
 .navigation/
 
 
+#.idea
