--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.parse:parseui-login-android:0.0.1'
     compile 'com.parse:parseui-widget-android:0.0.1'
     compile 'com.jjoe64:graphview:4.0.1'
+    compile 'junit:junit:4.12'
+    compile 'org.mockito:mockito-core:1.10.19'
 }
