--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:textSize="2sp">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:icon="@mipmap/ic_launcher"
+            android:textSize="2sp"
             />
 
 
