--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,16 @@
         android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:id="@+id/pic"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:onClick="myFancyMethod"
         android:textSize="2sp">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:id="@+id/pic1"
+            android:onClick="myFancyMethod"
             android:icon="@mipmap/ic_launcher"
             android:textSize="2sp"
             />
