--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:icon="@mipmap/ic_launcher"
         android:id="@+id/pic"
         android:label="@string/app_name"
+        android:textColor="#ffffff"
         android:theme="@style/AppTheme"
         android:onClick="myFancyMethod"
         android:textSize="2sp">
@@ -26,6 +27,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:id="@+id/pic1"
+            android:textColor="#ffffff"
             android:onClick="myFancyMethod"
             android:icon="@mipmap/ic_launcher"
             android:textSize="2sp"
