Set the orientation to Portrait permanently. Made changes to edit profile.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:textSize="2sp">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:id="@+id/pic1"
             android:textColor="#ffffff"
@@ -36,21 +37,27 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".CameraActivity"
-            android:label="Camera" >
+            android:label="Camera"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".DispatchActivity" >
+        <activity android:name=".DispatchActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".SignUporLogin" />
+        <activity android:name=".SignupActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SignUporLogin"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
