--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.0.0'
-    compile "com.android.support:appcompat-v7:23.1.0+"
+    compile 'com.android.support:support-v4:23.0.0+'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
     compile 'com.parse:parseui-login-android:0.0.1'
@@ -39,6 +38,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.github.boxme:squarecamera:1.1.0'
 
 
 }
