--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:id="@+id/pic"
         android:label="@string/app_name"
         android:textColor="#ffffff"
-        android:theme="@style/AppTheme"
         android:onClick="myFancyMethod"
         android:textSize="2sp">
         <activity
@@ -58,6 +57,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".SignUporLogin"
             android:screenOrientation="portrait"/>
+        <activity android:name="com.desmond.squarecamera.CameraActivity" />
     </application>
 
 </manifest>
