--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
             android:label="@string/app_name"
             android:id="@+id/pic1"
             android:textColor="#ffffff"
