fixed edit profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:onClick="myFancyMethod"
             android:icon="@mipmap/ic_launcher"
             android:textSize="2sp"
+            android:windowSoftInputMode="adjustPan"
             />
 
 
